<resources>
    <string name="app_name">Miss Notas y Tareas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buscar">Buscar</string>
    <string name="nueva_nota">Nueva Nota</string>
    <string name="ver_tareas">Ver Tareas</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="Nueva_Nota">Nueva Nota</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">Guardar</string>
    <string name="Nueva_Tarea">Nueva Tarea</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="seleccionar_alarma">Seleccionar Alarma</string>
    <string name="Guardar">Guardar</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="tomar_video">Iniciar video</string>
    <string name="detener_video">Detener video</string>
    <string name="agregar_foto_video">Agregar Foto/Video</string>
</resources>