<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="modeloTareas"
            type="com.example.missnotasytareas.viewModel.TareasViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondochido2"
        tools:context=".ui.TareasActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="95dp"
            android:layout_height="90dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tarea" />


        <EditText
            android:id="@+id/txtTituloTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="#22FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/Titulo"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={modeloTareas.titulo}"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/txtDescripcionTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:background="#22FFFFFF"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/Descripcion"
            android:inputType="textMultiLine"
            android:lines="4"
            android:text="@={modeloTareas.descripcion}"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTituloTarea" />

        <EditText
            android:id="@+id/txtFechaTarea"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="200dp"
            android:background="#22FFFFFF"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/fecha"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={modeloTareas.fecha}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea" />

        <EditText
            android:id="@+id/txtHoraTarea"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="#22FFFFFF"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/hora"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={modeloTareas.hora}"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea" />

        <Button
            android:id="@+id/btn_guardarTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:onClick="@{()->modeloTareas.guardarTarea()}"
            android:text="@string/Guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/NuevaTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="38dp"
            android:text="@string/Nueva_Tarea"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/txtTituloTarea"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_Editar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="200dp"
                android:background="@color/purple_500"
                android:onClick="@{()->modeloTareas.guardarTarea()}"
                android:text="Editar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_Borrar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:background="@color/purple_500"
                android:text="Borrar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/txtPonerHora"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="195dp"
            android:background="#22FFFFFF"
            android:hint="Aqui se pone la hora"
            android:visibility="gone"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea" />

        <Button
            android:id="@+id/btn_selecionarAlarma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/seleccionar_alarma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTarea" />

        <Button
            android:id="@+id/btn_fotovideo_tareas"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/agregar_foto_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_selecionarAlarma" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/Menuflotante"
            android:layout_width="181dp"
            android:layout_height="287dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardarTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:menu_fab_label="Menu">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/AgregarVideo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_camera"
                app:fab_label="Agregar Video" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/AgregarFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_menu_camera"
                app:fab_label="Agregar Foto" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/AgregarAudio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@android:drawable/ic_btn_speak_now"
                app:fab_label="Agregar Audio" />
        </com.github.clans.fab.FloatingActionMenu>

        <TextView
            android:id="@+id/txtUriVideoTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:ignore="MissingConstraints"
            android:hint="asd"
            android:text="@={modeloTareas.videouri}"/>

        <TextView
            android:id="@+id/txtUriImagenTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="asd"
            tools:ignore="MissingConstraints"
            android:text="@={modeloTareas.fotouri}"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="129dp"
            android:layout_height="142dp"
            android:layout_marginBottom="24dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardarTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginBottom="28dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardarTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnCargardatos"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cargar datos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.812"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_fotovideo_tareas" />

        <Button
            android:id="@+id/btn_vervideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="Ver Video"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardarTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_verimagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="ver Imagen"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btn_guardarTarea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.035"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>